# ris2bib

./: .gitignore  LICENSE  README.md  bbl2html.py  bbl2tex.py  format.py  pyproject.toml  ris2bib.py  setup.cfg
