[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ris2bib"
version = "0.1"
authors = [{name = "Jan Berges"}]
description = "Convert bibliographies from RIS to BibTeX format"
readme = "README.md"
urls = {Homepage = "https://github.com/janberges/ris2bib"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Freely Distributable",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.5"

[project.scripts]
ris2bib = "ris2bib:main"
bbl2html = "bbl2html:main"
bbl2tex = "bbl2tex:main"

[tool.setuptools]
py-modules = [
    'ris2bib',
    'bbl2html',
    'bbl2tex',
    ]
