[metadata]
name = ris2bib
version = 0.1
author = Jan Berges
author_email =
description = Convert bibliographies from RIS to BibTeX format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/janberges/ris2bib
classifiers =
    Programming Language :: Python
    License :: Freely Distributable
    Operating System :: POSIX :: Linux

[options]
python_requires = >=2.7
scripts =
    ris2bib.py
